Fixed warning box margin Too far from the top on small screens, so I shortened the margin

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -110,7 +110,7 @@ body {
     }
     .warning_box {
       padding: 25px;
-      margin-top: 100px;
+      margin-top: 25px;
       background-color: rgb(255, 255, 255);
       width: 50%;
       max-width: 1000px;
